[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.8.1"
sha256 = "1.5.0"

[workspace]
members = [
    "pow",
    "pos",
    "poh",
]

[[bin]]
name = "pow"
path = "pow/src/main.rs"

[[bin]]
name = "pos"
path = "pos/src/main.rs"

[[bin]]
name = "poh"
path = "poh/src/main.rs"
